--- a/[dataprep]_property_estimator.ipynb
+++ b/[dataprep]_property_estimator.ipynb
@@ -4,8 +4,9 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "toc_visible": true,
       "mount_file_id": "https://github.com/sucheerarighthere/bsc_dpdm22/blob/main/%5Bdataprep%5D_property_estimator.ipynb",
-      "authorship_tag": "ABX9TyMkr/32P9Sj1j7Qs/UQaSGG",
+      "authorship_tag": "ABX9TyN8yIetGzkxINnnPNOKKP3V",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -77,17 +78,17 @@
       "source": [
         "home = pd.read_excel('/content/drive/MyDrive/bsc_DPDM_data/คำตอบนักประเมิน.xlsx',sheet_name='บ้าน')\n",
         "home.head()\n",
-        "     "
+        "     #ถ้าอยากให้ไฟล์อัพเดทเป็นไฟล์ที่อาจารย์แก้แมนนวลแล้วให้ไปโหลดไฟล์ล่าสุดที่อาจารย์อัพลงในเฟสมารันใหม่ อันนี้ไม่ทำ กรณีศึกษา"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 250
+          "height": 354
         },
         "id": "1PwGHDnnWlGI",
-        "outputId": "472aa694-23c3-449c-a0a7-9709328c8dfe"
+        "outputId": "18fe095f-66db-4be6-d830-2ff03ff7bd74"
       },
-      "execution_count": 4,
+      "execution_count": 132,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -130,7 +131,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-326f2f36-c141-4e18-8655-769c9553cfb9\">\n",
+              "  <div id=\"df-4da506de-ad2b-49dc-9b75-c3e1438300df\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -255,7 +256,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-326f2f36-c141-4e18-8655-769c9553cfb9')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-4da506de-ad2b-49dc-9b75-c3e1438300df')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -306,12 +307,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-326f2f36-c141-4e18-8655-769c9553cfb9 button.colab-df-convert');\n",
+              "          document.querySelector('#df-4da506de-ad2b-49dc-9b75-c3e1438300df button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-326f2f36-c141-4e18-8655-769c9553cfb9');\n",
+              "          const element = document.querySelector('#df-4da506de-ad2b-49dc-9b75-c3e1438300df');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -334,7 +335,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 132
         }
       ]
     },
@@ -3044,7 +3045,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 250
+          "height": 354
         },
         "id": "zWhCAlS6ajtc",
         "outputId": "c2153851-e39e-4f83-ea22-9bcca20c0338"
@@ -3309,7 +3310,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 206
+          "height": 354
         },
         "id": "pWa387fnZ8kd",
         "outputId": "d7209a0e-885b-489a-acaf-ab59c673dbaa"
@@ -3808,7 +3809,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 206
+          "height": 302
         },
         "id": "rnb499YpbfcE",
         "outputId": "83798043-6d38-4f1e-9cc4-068cd8544a8b"
@@ -4350,7 +4351,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 424
+          "height": 659
         },
         "id": "6dimMOr_boyO",
         "outputId": "c7b9e6a5-40b4-447e-9026-75d198bdc174"
@@ -4807,7 +4808,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 468
+          "height": 659
         },
         "id": "27TJPATUceAO",
         "outputId": "ee3945a0-2a05-46ac-eef7-f322e80a0cf1"
@@ -5698,7 +5699,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 763
+          "height": 780
         },
         "id": "v7JKLFfVdeik",
         "outputId": "0f9d487b-e4b1-4a39-e8ee-104caeffc850"
@@ -6950,7 +6951,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 424
+          "height": 659
         },
         "id": "V2BPQqb8c357",
         "outputId": "4936d6b2-4efb-4e4f-fa17-60079f2f28ed"
@@ -7338,7 +7339,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 424
+          "height": 659
         },
         "id": "1vuAaCnDc6SL",
         "outputId": "c6aac96e-85e6-4ec9-84ea-2993102d9e81"
@@ -7726,7 +7727,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 728
+          "height": 763
         },
         "id": "NkPxMz6Zc_b2",
         "outputId": "b9203145-7eab-44d4-a78d-cd049432bbff"
@@ -9966,7 +9967,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 424
+          "height": 641
         },
         "id": "yzKsXnhMiEKg",
         "outputId": "75f6be36-c3b2-4a83-803d-9ef385e47920"
@@ -10354,7 +10355,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 424
+          "height": 624
         },
         "id": "FvIw9snKiFP-",
         "outputId": "0ce2ffa6-7ca3-41f3-cba0-38ed41bc8a39"
@@ -10742,7 +10743,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 528
+          "height": 728
         },
         "id": "yu_1LKLRjRiP",
         "outputId": "cafa0bc2-c565-47bb-de23-d6fe1ec1d3d4"
@@ -17401,6 +17402,19 @@
     {
       "cell_type": "markdown",
       "source": [
+        "บ้านเดี่ยว ลบ post id\n",
+        "9203\n",
+        "7349\n",
+        "3561\n",
+        "12250"
+      ],
+      "metadata": {
+        "id": "7zvKQIOSWi7M"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "## คอนโด"
       ],
       "metadata": {
@@ -20631,7 +20645,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##ที่ดิน"
+        "##ที่ดิน\n",
+        "ไม่มีแก้"
       ],
       "metadata": {
         "id": "fN0WNwTZhEjk"
