--- a/QUIZ.ipynb
+++ b/QUIZ.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyODDl8f1dfDtHLZtger+WQY",
+      "authorship_tag": "ABX9TyMAMsCBI3EDI0Mo+Ws4gfkt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1147,7 +1147,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 869
+          "height": 424
         },
         "id": "syghCbiJopc4",
         "outputId": "9de9e31c-2775-4914-87d1-7f3cf1af4d18"
@@ -1594,7 +1594,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 424
         },
         "id": "a931fqfWp-F9",
         "outputId": "f3e4825a-6c95-4eaf-dd09-3691201909f5"
@@ -2041,7 +2041,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 424
         },
         "id": "vF2lBsqdq99A",
         "outputId": "352d895c-1505-4c75-ca05-4cd9e903ebaa"
@@ -2488,7 +2488,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 783
+          "height": 424
         },
         "id": "oYP5OgHpr0QR",
         "outputId": "76c0419a-de40-4d63-f358-0fe7c304514c"
@@ -2935,7 +2935,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 783
+          "height": 424
         },
         "id": "6udvDXwpr4q9",
         "outputId": "ee3c59ee-3aed-4c52-8157-4a68c00255e9"
@@ -3395,7 +3395,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 783
+          "height": 424
         },
         "id": "_Aut-wv3r-KO",
         "outputId": "05e4c155-75ed-46cc-8cfe-ed95b5b136dd"
@@ -3855,7 +3855,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 783
+          "height": 424
         },
         "id": "CjlBy6XMsBn4",
         "outputId": "a44e9b3d-0bb2-44ef-9462-19deca0c8d40"
@@ -4876,7 +4876,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 869
+          "height": 424
         },
         "id": "ue_M8-FGxJ8A",
         "outputId": "8d4dd84d-d02b-4da1-9851-701a9ff0141d"
@@ -5335,7 +5335,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 892
         },
         "id": "t1eAC50Bxa4K",
         "outputId": "9b34d98a-b607-45c7-81e5-fc5caf70327c"
@@ -5814,7 +5814,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 892
         },
         "id": "PkP3Om-5yUiX",
         "outputId": "8fb72df2-f83d-44b3-e126-5b84098ad834"
@@ -6293,7 +6293,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 892
         },
         "id": "mjZ42Aqsya07",
         "outputId": "c5356025-5d27-4075-f483-44d8793f7e60"
@@ -8499,7 +8499,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 661
+          "height": 468
         },
         "id": "HxFcmWe-Rzfz",
         "outputId": "1978029f-213a-486d-bad1-1ad60d77e46f"
@@ -8957,59 +8957,87 @@
         "tdayp = dayp.T\n",
         "tdayp\n",
         "yo =pd.concat([tdayp,columnp])\n",
-        "yo.fillna(method='bfill')"
+        "yoyo=yo.fillna(method='bfill')"
       ],
       "metadata": {
-        "id": "_zn0n0TsTUBt",
-        "outputId": "ebd220c3-3038-43b3-9920-2bf1379c8b85",
+        "id": "_zn0n0TsTUBt"
+      },
+      "execution_count": 914,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "p2 = pressure.iloc[1:2,:]\n",
+        "dayp2 = p2.iloc[0:1,4:]\n",
+        "columnp2 = p2.iloc[0:1,0:4]\n",
+        "tdayp2 = dayp2.T\n",
+        "tdayp2\n",
+        "yo2 =pd.concat([tdayp2,columnp2])\n",
+        "yoyo2=yo2.fillna(method='bfill')"
+      ],
+      "metadata": {
+        "id": "MdmEIDXqWTvh"
+      },
+      "execution_count": 915,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "yoyo.rename(columns={1:'ความกดอากาศ'})"
+      ],
+      "metadata": {
+        "id": "3jOMC8gcWrvL",
+        "outputId": "ab684f43-728d-4432-9b34-62221ccf21ad",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
         }
       },
-      "execution_count": 900,
+      "execution_count": 916,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "          1  month province         station    year\n",
-              "1   1011.79   11.0  หนองคาย  352201-หนองคาย  2011.0\n",
-              "2   1010.83   11.0  หนองคาย  352201-หนองคาย  2011.0\n",
-              "3   1010.74   11.0  หนองคาย  352201-หนองคาย  2011.0\n",
-              "4   1010.71   11.0  หนองคาย  352201-หนองคาย  2011.0\n",
-              "5   1010.09   11.0  หนองคาย  352201-หนองคาย  2011.0\n",
-              "6   1009.24   11.0  หนองคาย  352201-หนองคาย  2011.0\n",
-              "7   1008.03   11.0  หนองคาย  352201-หนองคาย  2011.0\n",
-              "8    1007.2   11.0  หนองคาย  352201-หนองคาย  2011.0\n",
-              "9   1009.68   11.0  หนองคาย  352201-หนองคาย  2011.0\n",
-              "10  1011.96   11.0  หนองคาย  352201-หนองคาย  2011.0\n",
-              "11  1012.75   11.0  หนองคาย  352201-หนองคาย  2011.0\n",
-              "12  1013.67   11.0  หนองคาย  352201-หนองคาย  2011.0\n",
-              "13   1013.9   11.0  หนองคาย  352201-หนองคาย  2011.0\n",
-              "14  1013.99   11.0  หนองคาย  352201-หนองคาย  2011.0\n",
-              "15  1014.04   11.0  หนองคาย  352201-หนองคาย  2011.0\n",
-              "16   1012.1   11.0  หนองคาย  352201-หนองคาย  2011.0\n",
-              "17  1010.78   11.0  หนองคาย  352201-หนองคาย  2011.0\n",
-              "18  1009.32   11.0  หนองคาย  352201-หนองคาย  2011.0\n",
-              "19  1011.05   11.0  หนองคาย  352201-หนองคาย  2011.0\n",
-              "20  1014.14   11.0  หนองคาย  352201-หนองคาย  2011.0\n",
-              "21   1014.6   11.0  หนองคาย  352201-หนองคาย  2011.0\n",
-              "22  1013.63   11.0  หนองคาย  352201-หนองคาย  2011.0\n",
-              "23  1014.07   11.0  หนองคาย  352201-หนองคาย  2011.0\n",
-              "24   1015.4   11.0  หนองคาย  352201-หนองคาย  2011.0\n",
-              "25  1013.95   11.0  หนองคาย  352201-หนองคาย  2011.0\n",
-              "26  1012.35   11.0  หนองคาย  352201-หนองคาย  2011.0\n",
-              "27  1011.31   11.0  หนองคาย  352201-หนองคาย  2011.0\n",
-              "28  1009.59   11.0  หนองคาย  352201-หนองคาย  2011.0\n",
-              "29  1010.13   11.0  หนองคาย  352201-หนองคาย  2011.0\n",
-              "30  1010.47   11.0  หนองคาย  352201-หนองคาย  2011.0\n",
-              "31        -   11.0  หนองคาย  352201-หนองคาย  2011.0\n",
-              "1       NaN   11.0  หนองคาย  352201-หนองคาย  2011.0"
+              "   ความกดอากาศ  month province         station    year\n",
+              "1      1011.79   11.0  หนองคาย  352201-หนองคาย  2011.0\n",
+              "2      1010.83   11.0  หนองคาย  352201-หนองคาย  2011.0\n",
+              "3      1010.74   11.0  หนองคาย  352201-หนองคาย  2011.0\n",
+              "4      1010.71   11.0  หนองคาย  352201-หนองคาย  2011.0\n",
+              "5      1010.09   11.0  หนองคาย  352201-หนองคาย  2011.0\n",
+              "6      1009.24   11.0  หนองคาย  352201-หนองคาย  2011.0\n",
+              "7      1008.03   11.0  หนองคาย  352201-หนองคาย  2011.0\n",
+              "8       1007.2   11.0  หนองคาย  352201-หนองคาย  2011.0\n",
+              "9      1009.68   11.0  หนองคาย  352201-หนองคาย  2011.0\n",
+              "10     1011.96   11.0  หนองคาย  352201-หนองคาย  2011.0\n",
+              "11     1012.75   11.0  หนองคาย  352201-หนองคาย  2011.0\n",
+              "12     1013.67   11.0  หนองคาย  352201-หนองคาย  2011.0\n",
+              "13      1013.9   11.0  หนองคาย  352201-หนองคาย  2011.0\n",
+              "14     1013.99   11.0  หนองคาย  352201-หนองคาย  2011.0\n",
+              "15     1014.04   11.0  หนองคาย  352201-หนองคาย  2011.0\n",
+              "16      1012.1   11.0  หนองคาย  352201-หนองคาย  2011.0\n",
+              "17     1010.78   11.0  หนองคาย  352201-หนองคาย  2011.0\n",
+              "18     1009.32   11.0  หนองคาย  352201-หนองคาย  2011.0\n",
+              "19     1011.05   11.0  หนองคาย  352201-หนองคาย  2011.0\n",
+              "20     1014.14   11.0  หนองคาย  352201-หนองคาย  2011.0\n",
+              "21      1014.6   11.0  หนองคาย  352201-หนองคาย  2011.0\n",
+              "22     1013.63   11.0  หนองคาย  352201-หนองคาย  2011.0\n",
+              "23     1014.07   11.0  หนองคาย  352201-หนองคาย  2011.0\n",
+              "24      1015.4   11.0  หนองคาย  352201-หนองคาย  2011.0\n",
+              "25     1013.95   11.0  หนองคาย  352201-หนองคาย  2011.0\n",
+              "26     1012.35   11.0  หนองคาย  352201-หนองคาย  2011.0\n",
+              "27     1011.31   11.0  หนองคาย  352201-หนองคาย  2011.0\n",
+              "28     1009.59   11.0  หนองคาย  352201-หนองคาย  2011.0\n",
+              "29     1010.13   11.0  หนองคาย  352201-หนองคาย  2011.0\n",
+              "30     1010.47   11.0  หนองคาย  352201-หนองคาย  2011.0\n",
+              "31           -   11.0  หนองคาย  352201-หนองคาย  2011.0\n",
+              "1          NaN   11.0  หนองคาย  352201-หนองคาย  2011.0"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-0527030d-d8ad-4979-8134-32f196bc9dc8\">\n",
+              "  <div id=\"df-22aa9079-55ac-49fc-8567-f4c92869c7ca\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -9029,7 +9057,7 @@
               "  <thead>\n",
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
-              "      <th>1</th>\n",
+              "      <th>ความกดอากาศ</th>\n",
               "      <th>month</th>\n",
               "      <th>province</th>\n",
               "      <th>station</th>\n",
@@ -9296,7 +9324,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0527030d-d8ad-4979-8134-32f196bc9dc8')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-22aa9079-55ac-49fc-8567-f4c92869c7ca')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -9347,12 +9375,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-0527030d-d8ad-4979-8134-32f196bc9dc8 button.colab-df-convert');\n",
+              "          document.querySelector('#df-22aa9079-55ac-49fc-8567-f4c92869c7ca button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-0527030d-d8ad-4979-8134-32f196bc9dc8');\n",
+              "          const element = document.querySelector('#df-22aa9079-55ac-49fc-8567-f4c92869c7ca');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -9375,7 +9403,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 900
+          "execution_count": 916
         }
       ]
     },
